Work on registration simulation.